tests/compile_fail/borrow/lifetime_projection.stderr
error: `Borrow` cannot be derived for an associated type projection involving generic parameters because the impl can overlap with `core`'s blanket `Borrow` implementation
 --> tests/compile_fail/borrow/lifetime_projection.rs:6:16
  |
6 | struct Foo<'a>(<&'a i32 as Trait>::Assoc)
  |                ^
